cleaned up subscribe to work with pics that dont show up anymore, fixed non-soundcloud align

--- a/style.less
+++ b/style.less
@@ -155,6 +155,10 @@ body,h1,a {
         box-shadow: 0 0 10px #000000;
     }
 
+    img.full {
+        bottom: 0;
+    }
+
     iframe {
         position: fixed;
         bottom: 0;
